[gd_scene load_steps=4 format=3 uid="uid://c4p60nxwebeth"]

[ext_resource type="Script" path="res://scenes/levels/main.gd" id="1_fi7pu"]
[ext_resource type="PackedScene" uid="uid://bc8flfd8jo477" path="res://scenes/ui/main_menu.tscn" id="3_205t7"]
[ext_resource type="PackedScene" uid="uid://gd55an8noliv" path="res://scenes/ui/pause_menu.tscn" id="3_kclud"]

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_fi7pu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("3_205t7")]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("3_kclud")]
visible = false

[connection signal="start_game" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="pause_quit_to_title" from="CanvasLayer/PauseMenu" to="." method="_on_pause_menu_pause_quit_to_title"]
